Bug 455327 - Filename in the text field is not renamed after the selected file is renamed in a file dialog
Summary: Filename in the text field is not renamed after the selected file is renamed ...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: Open/save dialogs (other bugs)
Version First Reported In: 5.95.0
Platform: openSUSE Linux
: NOR minor
Target Milestone: ---
Assignee: KIO Bugs
URL:
Keywords: usability
: 449499 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-06-15 13:21 UTC by Fushan Wen
Modified: 2022-06-25 17:55 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:
qydwhotmail: Usability+


Attachments
not renamed.mp4 (465.53 KB, video/mp4)
2022-06-15 13:21 UTC, Fushan Wen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Fushan Wen 2022-06-15 13:21:29 UTC
Created attachment 149744 [details]
not renamed.mp4

SUMMARY
If I rename a selected file in a file dialog, the file name is not updated in the text field.


STEPS TO REPRODUCE
1. Open file dialog
2. Select a file
3. Rename it

OBSERVED RESULT
File name in the text field "Name:" is not updated.

EXPECTED RESULT
Updated

SOFTWARE/OS VERSIONS
Information for package plasma-framework:
-----------------------------------------
Repository     : @System
Name           : plasma-framework
Version        : 5.95.0git.20220614T140532~dff1b034-ku.20.1
Arch           : x86_64
Vendor         : obs://build.opensuse.org/KDE:Unstable
Installed Size : 2.7 MiB
Installed      : Yes
Status         : up-to-date
Source package : plasma-framework-5.95.0git.20220614T140532~dff1b034-ku.20.1.src
Upstream URL   : https://www.kde.org
Summary        : Plasma library and runtime components based upon KF5 and Qt5
Comment 1 Bug Janitor Service 2022-06-15 14:06:51 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/868
Comment 2 Patrick Silva 2022-06-15 21:08:31 UTC
*** Bug 449499 has been marked as a duplicate of this bug. ***
Comment 3 Ahmad Samir 2022-06-25 17:55:05 UTC
Git commit 6d47b5869d4b328614e5e95e97ef66d97009295e by Ahmad Samir, on behalf of Fushan Wen.
Committed on 25/06/2022 at 17:54.
Pushed by ahmadsamir into branch 'master'.

filewidgets: update location text after selected files are renamed

Before this commit, the location text is not updated after the selected
files are renamed.

M  +2    -1    src/filewidgets/kdiroperator.cpp
M  +9    -0    src/filewidgets/kdiroperator.h
M  +4    -0    src/filewidgets/kfilewidget.cpp

https://invent.kde.org/frameworks/kio/commit/6d47b5869d4b328614e5e95e97ef66d97009295e