filewidgets: update location text after selected files are renamed

Before this commit, the location text is not updated after the selected
files are renamed.

BUG: 455327